--- a/docker-compose.sample.yml
+++ b/docker-compose.sample.yml
@@ -6,5 +6,7 @@ services:
       - "80:80" # Expose the port
     environment:
       - "APP_PORT=80" # Set port for the web server. (Default is 80)
+      - "APP_DEBUG=false"
+      - "APP_BASE_URL=http://localhost/" # Base url for short url.
     volumes:
       - /mnt/data/urlshort/urls.db:/app/urls.db # Set the location for the SQLite3 database.
